# Androne

./: connect
.circleci/: config.yml
app/: proguard-rules.pro
app/src/androidTest/java/com/theostanton/androne/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/theostanton/androne/: BaseApplication.kt  MainActivity.kt  Orientation.kt  OrientationSource.kt  PolygoneDrawable.kt  Reading.kt  Sensors.kt
app/src/main/java/com/theostanton/androne/controller/: Coefficients.kt  Controller.kt  Receiver.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/androne/: ExampleUnitTest.kt  FloatTests.kt
blue/src/androidTest/java/com/theostanton/blue/: ExampleInstrumentedTest.java
blue/src/main/: AndroidManifest.xml
blue/src/main/java/com/theostanton/blue/: Blue.kt
blue/src/test/java/com/theostanton/blue/: ExampleUnitTest.java
common/src/androidTest/java/com/theostanton/common/: ExampleInstrumentedTest.java
common/src/main/: AndroidManifest.xml
common/src/main/java/com/theostanton/common/: Device.kt  RX.kt  String.kt  Util.kt
common/src/test/java/com/theostanton/common/: ExampleUnitTest.java
l3gd20/src/main/: AndroidManifest.xml
l3gd20/src/main/java/com/theostanton/l3gd20/: Constants.kt  L3GD20.kt  L3GD20Driver.kt
l3gd20/src/main/res/values/: strings.xml
l3gd20/src/test/java/com/theostanton/l3gd20/: ExampleUnitTest.java
lsm303/src/main/: AndroidManifest.xml
lsm303/src/main/java/com/theostanton/lsm303/: Constants.kt  LSM303Acc.kt  LSM303AccDriver.kt  LSM303Accel.kt  LSM303Driver.kt  LSM303Mag.kt  Lsm303MagDriver.kt
lsm303/src/main/res/values/: strings.xml
monitor/src/main/: AndroidManifest.xml
monitor/src/main/java/com/theostanton/monitor/: MainActivity.kt  SocketServer.java
monitor/src/main/res/layout/: activity_main.xml
tx/src/main/: AndroidManifest.xml
tx/src/main/cpp/: CMakeLists.txt  native-lib.cpp
tx/src/main/java/com/theostanton/tx/: BufferUntil.kt  TX.kt
tx/src/main/res/values/: strings.xml
tx/src/test/java/com/theostanton/tx/: ExampleUnitTest.java
(+17 files in other folders)
